deploy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: medulla-gateway
  annotations:
    "helm.sh/hook": post-install
    "helm.sh/hook-weight": "10"
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "medulla.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: medulla
  annotations:
    "helm.sh/hook": post-install
    "helm.sh/hook-weight": "10"
spec:
  hosts:
  - "medulla.io"
  gateways:
  - medulla-gateway
  http:
  - route:
    - destination:
        host: medulla
        port:
          number: 8000
